--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<link rel="stylesheet" type="text/css" href="style/style.css">
 	</head>
 	<body>
+		<h1>Gallows</h1>
+		<p>Guess the following letters and find the hidden sentence. But be careful! You have only nine shot...</p>
 		<div id="box">
 			<div id="board"></div>
 			<div id="gallows">
