--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<h1>Gallows</h1>
-		<p>Guess the following letters and find the hidden sentence. But be careful! You have only nine shot...</p>
+		<p>Guess the following letters and find the hidden sentence. But be careful! You have only nine shots...</p>
 		<div id="box">
 			<div id="board"></div>
 			<div id="gallows">
